--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,77 @@
 }
 
 .container-tweeter{
-    border: 1px solid black;
+     border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 800px;
+  
+    background-color:rgb(0, 0, 0); ;
+    border-radius: 5px;
+    margin-top: 50px;
+    position: relative;
+}
+.input-post {
+    outline: none; 
+    border: none;
+    padding: 8px;
+    width: 100%;
+    font-size: 16px;
+    transition: all 0.3s; 
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    resize: none; 
+     border-radius: 5px;
+}
+.input-post::placeholder {
+    color: white; /* צבע לבן */
+    opacity: 1;   /* במידה והדפדפן מטיל שקיפות כברירת מחדל */
+}
+
+.btnSharePost{
+
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 70px;
+    height: 70px; 
+    border-top: 1px solid white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.btnSharePost:hover{
+
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 70px;
+    height: 70px; 
+    border-top: 1px solid white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 1px 1px 10px rgb(255, 255, 255);
+    transition: 0.3s ease;
+}
+
+.container-x{
+
+ 
+    width: 110px;
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-bottom: -30px;
+    
+}
+.xImge{
+    width: 100px;
+    height: 100px; 
+    border: 1px solid rgb(39, 39, 39);
+    border-radius: 50%;
+    box-shadow: 1px 1px 10px gray;
+    
 }
