--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,9 @@
 
 body {
  
-  background-color: antiquewhite;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(255, 255, 255);
 }
