--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,32 @@
     box-sizing: border-box;
 }
 
+.head-container{
+
+    background-color: rgb(0, 0, 0);
+    
+}
+
 .container-tweeter{
      border: 1px solid white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-     width: 100%;
+    width: 90%;
     
-  
+    margin: auto;
     background-color:rgb(0, 0, 0); ;
     border-radius: 5px;
     margin-top: 50px;
+    margin-bottom: 100px;
     position: relative;
 }
 .input-post {
     outline: none; 
     border: none;
     padding: 8px;
-    width: 100%;
+    width: 90%;
     font-size: 16px;
     transition: all 0.3s; 
     background-color: rgb(0, 0, 0);
@@ -66,7 +73,7 @@
 
 .container-x{
 
- 
+    
     width: 110px;
     height: 110px;
     display: flex;
@@ -87,8 +94,10 @@
 
 .containerOfTweets{
   
-    width: 800px;
-    margin-top: 75px;
+    width: 90%;
+    margin: auto;
+    
+    
   
 }
 
@@ -152,8 +161,11 @@
 
 
 @media (max-width: 768px) {
+
+
     .container-tweeter, .containerOfTweets {
-        width: 95%; /* מתכווץ למסכים קטנים */
+        width: 80%; /* מתכווץ למסכים קטנים */
+        margin: auto;
     }
 
     .btnSharePost, .disable {
@@ -166,6 +178,7 @@
     .input-post {
         font-size: 14px; /* פונט קטן יותר למובייל */
         padding: 6px;
+        width: 100%;
     }
 
     .xImge {
@@ -193,7 +206,7 @@
 
 .containerOfTweets{
   
-    width: 250px;
+    width: 500px;
     margin-top: 75px;
   
 }
