--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,16 @@
 
 body {
  
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 244, 244);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 800px;
   margin: auto;
-  border: 1px solid white;
+
   color: rgb(255, 255, 255);
+  
+  /* gradient משמאל וימין */
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(10, 10, 10, 0) 20%, rgba(0, 0, 0, 0.3));
+  z-index: 0; /* מאחורי הקונטיינר */
 }
