--- a/src/components/AuthenticationImage.css
+++ b/src/components/AuthenticationImage.css
@@ -1,7 +1,7 @@
 *{box-sizing: border-box;}
 
 .container-login{
-    width: 100%;
+    width: 800px;
     height: 100vh;
     background-color: black;
     display: flex;
@@ -14,9 +14,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    border: 1px solid black;
-    height: 500px;
+    width: 400px;
+    margin-top: 200px;
+    padding: 10px;
+    border: 1px solid rgb(224, 222, 222);
+    height: 400px;
+    border-radius: 10px;
 }
 .in2{
     background-color: black;
